Final name for N-KS

--- a/Projects.json
+++ b/Projects.json
@@ -1,12 +1,11 @@
 [
   {
-    "ProjectName": "Kernel Simulator",
-    "Description": "Kernel Simulator simulates our future-planned kernel, Nitrocid Kernel! It is made entirely in .NET with multiplatform support.",
-    "ProjectSlug": "Kernel-Simulator",
+    "ProjectName": "Nitrocid KS",
+    "Description": "Nitrocid KS simulates our future-planned kernel, Nitrocid Kernel! It is made entirely in .NET with multiplatform support.",
+    "ProjectSlug": "NitrocidKS",
     "ProjectGBSlug": "kernel-simulator-manual",
     "NuGetPackages": [
-      "KS",
-      "KS.CoreCLR"
+      "KS"
     ]
   },
   {
