--- a/Projects.json
+++ b/Projects.json
@@ -184,5 +184,14 @@
     "NuGetPackages": [
       "Yunikodo"
     ]
+  },
+  {
+    "ProjectName": "Wordament",
+    "Description": "A C# library that takes a random word from +400k word list",
+    "ProjectSlug": "Wordament",
+    "ProjectGBSlug": "wordament",
+    "NuGetPackages": [
+      "Wordament"
+    ]
   }
 ]
