Updated Nitrocid KS link

--- a/Projects.json
+++ b/Projects.json
@@ -3,7 +3,7 @@
     "ProjectName": "Nitrocid KS",
     "Description": "Nitrocid KS simulates our future-planned kernel, Nitrocid Kernel! It is made entirely in .NET with multiplatform support.",
     "ProjectSlug": "NitrocidKS",
-    "ProjectGBSlug": "kernel-simulator-manual",
+    "ProjectGBSlug": "nitrocid-ks-manual",
     "NuGetPackages": [
       "KS"
     ]
