--- a/Projects.json
+++ b/Projects.json
@@ -158,12 +158,13 @@
   },
   {
     "ProjectName": "colorseq-rust",
-    "Description": "Simplifies how to make your own color VT sequence to print text with customized colors to your console, including 255 and true color support, color blind support, and various color properties.",
+    "Description": "Simplifies how to make your own color VT sequence to print text with customized colors to your console, including 255 and true color support, color blind support, and various color properties. Rust version. Part of the Terminaux suite.",
     "ProjectSlug": "colorseq-rust",
-    "ProjectGBSlug": "colorseq-manual",
+    "ProjectGBSlug": "terminaux-manual",
     "NuGetPackages": [
 	
-    ]
+    ],
+    "ProjectImageLink": "OfficialAppIcon-ColorSeq-Rust-512.png"
   },
   {
     "ProjectName": "SharpLyrics",
