add - Added BassBoom
---

Type: add
Breaking: False
Doc Required: False
Part: 1/1

--- a/Projects.json
+++ b/Projects.json
@@ -248,12 +248,13 @@
   },
   {
     "ProjectName": "BassBoom",
-    "Description": "[UNFINISHED] A cross-platform music app and library",
+    "Description": "0.0.1 Alpha 1 - A cross-platform music app and library",
     "ProjectSlug": "BassBoom",
     "ProjectGBSlug": "bassboom-manual",
     "NuGetPackages": [
-      
+      "BassBoom.Basolia",
+      "BassBoom.Native"
     ],
-    "ProjectImageLink": "OfficialAppIcon-BassBoom-512.png"
+    "ProjectImageLink": "BassBoom/Assets/OfficialAppIcon-BassBoom-512.png"
   }
 ]
